# machine-learning

./: .gitignore  CMakeLists.txt  README.md  run_make_unix.sh  run_make_windows.sh
cmakeutils/: code_gen.txt
examples/cpu/01_linear_regression/: CMakeLists.txt  linear_regression.cpp
examples/cpu/02_close_handler/: CMakeLists.txt  close_handler.cpp
examples/cpu/03_load_cifar_10/: CMakeLists.txt  load_cifar_10.cpp
examples/cpu/04_logistic_regression/: 04_logistic_regression.cpp  CMakeLists.txt
examples/opencl/: CMakeLists.txt
examples/opencl/01_hello_world/: CMakeLists.txt  hello.cpp
include/mg_ml/common/: dataset.h  matrix.h  plotting.h
include/mg_ml/cpu/: matrix.h  matrix_functions.h
include/mg_ml/cpu/models/: activation_functions.h  linear_regression.h  logistic_regression.h  neural_network.h
include/mg_ml/gpu/opencl/: cl_wrap.h
src/: CMakeLists.txt
src/common/: dataset.cpp
src/core/: dataset.cpp
src/cpu/: CMakeLists.txt  matrix.cpp  matrix_functions.cpp
src/cpu/models/: linear_regression.cpp
tests/: CMakeLists.txt
tests/src/: dummy.cpp  logistic_regression.cpp  matrix_mult_tests.cpp  matrix_transpose_tesets.cpp  matrix_transpose_tests.cpp  nn.cpp  random_init.cpp  test_utils.h
tests/test_data/: A_1024_32.txt  A_transposed_32_1024.txt  AxB_1024_1024.txt  AxB_1024_64.txt  AxB_transposed_1024_1024.txt  B_32_64.txt  C_1024_32.txt  matlab_mat_gen.m
